btn form responsive - reservation

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 </head>
 
 <body>
-
-
     <div class="header">
         <div class="title_responsive">
             <h1>Reserva alojamientos y experiencias únicas.</h1>
@@ -36,6 +34,9 @@
             <div>
                 <label for="">Huéspedes</label>
                 <input type="text" placeholder="Huéspedes" class="input">
+            </div>
+            <div>
+                <button class="btn_search_reservation_responsive">Buscar</button>
             </div>
         </div>
     </div>
