--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="public/style.css">
+    <link href="public/vanillaCalendar.css" rel="stylesheet">
     <title>Test Landing</title>
 </head>
 
@@ -24,11 +25,11 @@
             <div class="form_responsive_items">
                 <div>
                     <label for="">Llegada</label>
-                    <input type="text" placeholder="Llegada" class="input input_items">
+                    <input type="text" placeholder="Llegada" class="input input_items" id="llegada">
                 </div>
                 <div>
                     <label for="">Salida</label>
-                    <input type="text" placeholder="Salida" class="input input_items">
+                    <input type="text" placeholder="Salida" class="input input_items" id="salida">
                 </div>
             </div>
             <div>
@@ -40,6 +41,67 @@
             </div>
         </div>
     </div>
+
+    <div class="calendar_container" id="calendar_container">
+        <div id="v-cal">
+            <div class="vcal-header">
+                <button class="vcal-btn" data-calendar-toggle="previous">
+                    <svg height="24" version="1.1" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"></path>
+                    </svg>
+                </button>
+
+                <div class="vcal-header__label" data-calendar-label="month">
+                    March 2017
+                </div>
+
+
+                <button class="vcal-btn" data-calendar-toggle="next">
+                    <svg height="24" version="1.1" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"></path>
+                    </svg>
+                </button>
+            </div>
+            <div class="vcal-week">
+                <span>Mon</span>
+                <span>Tue</span>
+                <span>Wed</span>
+                <span>Thu</span>
+                <span>Fri</span>
+                <span>Sat</span>
+                <span>Sun</span>
+            </div>
+            <div class="vcal-body" data-calendar-area="month"></div>
+        </div>
+    </div>
+
+    <input type="hidden" id="llegada_selected">
+    <input type="hidden" id="salida_selected">
+
+    <script src="public/vanillaCalendar.js" type="text/javascript"></script>
+    <script>
+        window.addEventListener('load', function () {
+            vanillaCalendar.init({
+                disablePastDays: true
+            });
+        })
+
+        document.getElementById('llegada').addEventListener('click', function(e) {
+            document.getElementById("calendar_container").style.display="block"
+            /*Contador que controla el llenado de los input date, el active llena el dato*/
+            document.getElementById("llegada_selected").value = "active"
+            document.getElementById("salida_selected").value = "inactive"
+        })
+
+        document.getElementById('salida').addEventListener('click', function(e) {
+            document.getElementById("calendar_container").style.display="block"
+           /*Contador que controla el llenado de los input date, el active llena el dato*/
+           document.getElementById("salida_selected").value = "active"
+           document.getElementById("llegada_selected").value = "inactive"
+        })     
+
+    </script>
+
 </body>
 
 </html>
