form reservation, categories gallery

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div class="title_responsive">
             <h1>Reserva alojamientos y experiencias únicas.</h1>
         </div>
+        <div class="title_desktop">
+            <h1>En desarrollo versión mobile.</h1>
+        </div>
     </div>
     <div class="container">
         <div class="form_reservation_responsive">
@@ -72,6 +75,25 @@
                 <span>Sun</span>
             </div>
             <div class="vcal-body" data-calendar-area="month"></div>
+        </div>
+    </div>
+
+    <div class="subtitle_responsive">
+        <h2>Descubre Airbnb</h2>
+    </div>
+
+    <div class="categories">
+        <div class="item_categories">
+            <img src="https://a0.muscache.com/4ea/air/v2/pictures/8b7519ec-2c82-4c09-8233-fd4d2715bbf9.jpg?t=r:w375-h250-sfit,e:fjpg-c80" alt="">
+        </div>
+        <div class="item_categories">
+            <img src="https://a0.muscache.com/4ea/air/v2/pictures/a77ee672-e790-4362-8cc5-52bec1371ece.jpg?t=r:w375-h250-sfit,e:fjpg-c80" alt="">
+        </div>
+        <div class="item_categories">
+            <img src="https://a0.muscache.com/4ea/air/v2/pictures/38f2bfd6-1f4d-46d7-babf-61657deef302.jpg?t=r:w375-h250-sfit,e:fjpg-c80" alt="">
+        </div>
+        <div class="item_categories">
+            <img src="https://a0.muscache.com/4ea/air/v2/pictures/da2d8e97-90b7-409f-94ac-5ab0327c289b.jpg?t=r:w375-h250-sfit,e:fjpg-c80" alt="">
         </div>
     </div>
 
