readonly inputs date

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <div class="form_responsive_items">
                 <div>
                     <label for="">Llegada</label>
-                    <input type="text" placeholder="Llegada" class="input input_items" id="llegada">
+                    <input type="text" placeholder="Llegada" class="input input_items" id="llegada" readonly="">
                 </div>
                 <div>
                     <label for="">Salida</label>
-                    <input type="text" placeholder="Salida" class="input input_items" id="salida">
+                    <input type="text" placeholder="Salida" class="input input_items" id="salida" readonly="">
                 </div>
             </div>
             <div>
