--- a/index.html
+++ b/index.html
@@ -15,8 +15,34 @@
         <div class="title_responsive">
             <h1>Reserva alojamientos y experiencias únicas.</h1>
         </div>
-        <div class="title_desktop">
-            <h1>En desarrollo versión mobile.</h1>
+        <div class="container_form_reservation_desktop">
+            <div></div>
+            <div class="form_reservation_desktop">
+                <div class="title_desktop">
+                    <h1>Reserva alojamientos y experiencias únicas.</h1>
+                </div>
+                <div>
+                    <label for="">Dónde</label>
+                    <input type="text" placeholder="Dónde" class="input">
+                </div>
+                <div class="form_responsive_items">
+                    <div>
+                        <label for="">Llegada</label>
+                        <input type="text" placeholder="Llegada" class="input input_items" id="llegada_desktop" readonly="">
+                    </div>
+                    <div>
+                        <label for="">Salida</label>
+                        <input type="text" placeholder="Salida" class="input input_items" id="llegada_desktop" readonly="">
+                    </div>
+                </div>
+                <div>
+                    <label for="">Huéspedes</label>
+                    <input type="text" placeholder="Huéspedes" class="input">
+                </div>
+                <div>
+                    <button class="btn_search_reservation_responsive">Buscar</button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="container">
@@ -84,16 +110,20 @@
 
     <div class="categories">
         <div class="item_categories">
-            <img src="https://a0.muscache.com/4ea/air/v2/pictures/8b7519ec-2c82-4c09-8233-fd4d2715bbf9.jpg?t=r:w375-h250-sfit,e:fjpg-c80" alt="">
+            <img src="https://a0.muscache.com/4ea/air/v2/pictures/8b7519ec-2c82-4c09-8233-fd4d2715bbf9.jpg?t=r:w375-h250-sfit,e:fjpg-c80"
+                alt="">
         </div>
         <div class="item_categories">
-            <img src="https://a0.muscache.com/4ea/air/v2/pictures/a77ee672-e790-4362-8cc5-52bec1371ece.jpg?t=r:w375-h250-sfit,e:fjpg-c80" alt="">
+            <img src="https://a0.muscache.com/4ea/air/v2/pictures/a77ee672-e790-4362-8cc5-52bec1371ece.jpg?t=r:w375-h250-sfit,e:fjpg-c80"
+                alt="">
         </div>
         <div class="item_categories">
-            <img src="https://a0.muscache.com/4ea/air/v2/pictures/38f2bfd6-1f4d-46d7-babf-61657deef302.jpg?t=r:w375-h250-sfit,e:fjpg-c80" alt="">
+            <img src="https://a0.muscache.com/4ea/air/v2/pictures/38f2bfd6-1f4d-46d7-babf-61657deef302.jpg?t=r:w375-h250-sfit,e:fjpg-c80"
+                alt="">
         </div>
         <div class="item_categories">
-            <img src="https://a0.muscache.com/4ea/air/v2/pictures/da2d8e97-90b7-409f-94ac-5ab0327c289b.jpg?t=r:w375-h250-sfit,e:fjpg-c80" alt="">
+            <img src="https://a0.muscache.com/4ea/air/v2/pictures/da2d8e97-90b7-409f-94ac-5ab0327c289b.jpg?t=r:w375-h250-sfit,e:fjpg-c80"
+                alt="">
         </div>
     </div>
 
@@ -108,19 +138,19 @@
             });
         })
 
-        document.getElementById('llegada').addEventListener('click', function(e) {
-            document.getElementById("calendar_container").style.display="block"
+        document.getElementById('llegada').addEventListener('click', function (e) {
+            document.getElementById("calendar_container").style.display = "block"
             /*Contador que controla el llenado de los input date, el active llena el dato*/
             document.getElementById("llegada_selected").value = "active"
             document.getElementById("salida_selected").value = "inactive"
         })
 
-        document.getElementById('salida').addEventListener('click', function(e) {
-            document.getElementById("calendar_container").style.display="block"
-           /*Contador que controla el llenado de los input date, el active llena el dato*/
-           document.getElementById("salida_selected").value = "active"
-           document.getElementById("llegada_selected").value = "inactive"
-        })     
+        document.getElementById('salida').addEventListener('click', function (e) {
+            document.getElementById("calendar_container").style.display = "block"
+            /*Contador que controla el llenado de los input date, el active llena el dato*/
+            document.getElementById("salida_selected").value = "active"
+            document.getElementById("llegada_selected").value = "inactive"
+        })
 
     </script>
 
