font family roboto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="public/normalize.css">
     <link rel="stylesheet" href="public/style.css">
     <link href="public/vanillaCalendar.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
     <title>Test Landing</title>
 </head>
 
@@ -106,7 +107,7 @@
     </div>
 
     <div class="subtitle_responsive">
-        <h2>Descubre Airbnb</h2>
+        <h2>Descubre este website</h2>
     </div>
 
     <div class="categories">
