--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             <div class="form_responsive_items">
                 <div>
                     <label for="">Llegada</label>
-                    <input type="text" placeholder="Llegada" class="input input_items" id="llegada" readonly="">
+                    <input type="text" placeholder="Llegada" class="input input_items" id="" readonly="">
                 </div>
                 <div>
                     <label for="">Salida</label>
-                    <input type="text" placeholder="Salida" class="input input_items" id="salida" readonly="">
+                    <input type="text" placeholder="Salida" class="input input_items" id="" readonly="">
                 </div>
             </div>
             <div>
